@@ -132,6 +132,8 @@ IMPROVEMENTS:
   ZOOKEEPER-2153 X509 Authentication Documentation
   (Ian Dimayuga via hdeng)
 
+  ZOOKEEPER-2171 avoid reverse lookups in QuorumCnxManager (rgs via michim)
+
 Release 3.5.0 - 8/4/2014
 
 NEW FEATURES:
